--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   margin: 40px;
+  height: 100%;
 }
 
 .App-logo {
@@ -47,10 +48,12 @@
 .sidebar-container {
   display: flex;
   width: 100%;
+  height: 100%;
 }
 
 .sideBar {
   min-width: 400px;
+  height: 100%;
 }
 
 .sideBar-item {
@@ -61,6 +64,7 @@
   padding: 35px;
   font-size: x-large;
   cursor: pointer;
+  height: 100%;
 }
 
 .sideBar-item:hover {
@@ -69,6 +73,10 @@
 
 .sideBar-item:active {
   background-color: #0f26a1;
+}
+
+.sideBar-item.active {
+  background-color: red;
 }
 
 .sideBar-item-modal {
@@ -80,12 +88,8 @@
   justify-content: center;
   align-items: center;
   font-size: x-large;
-  cursor: pointer;
 }
 
-.sideBar-item-modal:hover {
-  background-color: #122ba6;
-}
 
 .sideBar-item-modal > button {
   margin: 10px;
@@ -98,4 +102,8 @@
   height: 15px;
   border-radius: 50px;
   box-shadow: 0px 0px 5px #000;
+}
+
+.line {
+  white-space: pre-line;
 }
