--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,7 @@
 
 .sideBar-item {
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   background-color: #263fbd;
   color: white;
